add topic meditation under thoughts & add to a million thoughts

--- a/bookglean/a_million_thoughts.html
+++ b/bookglean/a_million_thoughts.html
@@ -16,6 +16,9 @@
         Man suffers becuase he is too scattered.
     </p>
     <p>
+        Our thoughts fuel our habits, desires and temperament.
+    </p>
+    <p>
         The reason man is unhappy is because his thoughts, speech and action are not in harmony.
         Anything that is not in harmony in the play of nature is either eliminated completely or 
         forced to align. Suffering is alignment.<br>
@@ -26,5 +29,6 @@
             <li>dispassion</li>
         </ul>
     </p>
+    <p>When you mend the fluctuations of your conciousness you become a river that's merging in the sea.</p>
 </body>
 </html>
