add more content to a_million_thoughts

--- a/bookglean/a_million_thoughts.html
+++ b/bookglean/a_million_thoughts.html
@@ -30,5 +30,28 @@
         </ul>
     </p>
     <p>When you mend the fluctuations of your conciousness you become a river that's merging in the sea.</p>
+
+    <p>
+        far behind every feeling and experience. there is the thought.
+        Absence of thoughts, however, does not lead to absence of feelings. On the contrary, 
+        a still mind is like the tranquil lake, it's like the calm ocean, an absolute beauty. 
+        For thoughts are teh ripples in that lake, emotions are the waves in the oceans of mind. 
+        They remain inseparable though - waves from ocean.
+
+        Good meditators, or even mindful perople, transcend their thoughts by simply watching them. 
+        Most thoughts are random and fickle; they are not worth pursuing. 
+        Upon close exampination, you will discover that thoughts are highly ephemeral and if you 
+        don't hold on to them, they disappear exactly like bubbles in water.
+
+        Whenever you are bothered by any lingering thought, simply ask yourself the following three questions 
+        and watch it become feeble in no time:
+        <ul>
+            <li>1. From where has this thought originated?</li>
+            <li>2. Where is it traveling?</li>
+            <li>Where has it disappeared?</li>
+        </ul>
+
+        As you pnder on these, you begin to understand tha anatomy of a thought; basically, its emptiness.
+    </p>
 </body>
 </html>
