--- a/bookglean/a_million_thoughts.html
+++ b/bookglean/a_million_thoughts.html
@@ -51,7 +51,9 @@
             <li>Where has it disappeared?</li>
         </ul>
 
-        As you pnder on these, you begin to understand tha anatomy of a thought; basically, its emptiness.
+        As you ponder on these, you begin to understand tha anatomy of a thought; basically, its emptiness.
+        Thoughts have no definitive point of origin, no set course of travel, and no specific site or disappearance. 
+        
     </p>
 </body>
 </html>
