add my_take_on Spirituality & minor changes in 2 more files

--- a/my_take_on/friendship.html
+++ b/my_take_on/friendship.html
@@ -6,7 +6,7 @@
     <title>View of Friendship</title>
 </head>
 <body>
-    <h1>My take on: <em style="color: blueviolet;">Friendship</em></h1>
+    <h1>My take on: <span style="color: blueviolet;">Friendship</span></h1>
     <p>
         Friends make a lot of sense and importance. 
         I wish every human gets at the least one true friend.
