--- a/my_take_on/religion.html
+++ b/my_take_on/religion.html
@@ -6,7 +6,7 @@
     <title>View on Religion</title>
 </head>
 <body>
-    <h1>My take on: <em style="color: blueviolet;">Religion</em></h1>
+    <h1>My take on: <span style="color: blueviolet;">Religion</span></h1>
     <p>
         "Religion plays a key role in every person's life." <br>
         It's upto the person how to use religion in his/her daily discourse.
