add content to time file

--- a/my_take_on/time.html
+++ b/my_take_on/time.html
@@ -7,5 +7,34 @@
 </head>
 <body>
     <h1>My take on: <span style="color: blueviolet;">Time</span></h1>
+    <p>
+        Time has many adjectives: Time is powerful, time is money, time is precious, time is limited, time is relative. <br>
+        How time is defined? Before we define it, let's talk how time is seen in various religions:
+        <ul>
+            <li>
+                <b>Christianity</b> generally views time as linear, starting from the creation of the world and moving toward an ultimate end, 
+                    often described as the "End Times" or "Second Coming."
+            </li>
+            <li>
+                <b>Islam</b> also views time as linear, beginning with creation and ending with the Day of Judgment.
+            </li>
+            <li>
+                <b>Hinduism</b> often sees time as cyclical, involving endless cycles of creation, preservation, and destruction (Samsara). 
+                The concept of Yugas (ages) represents different epochs within these cycles, with the current age being the Kali Yuga.
+            </li>
+            <li>
+                <b>Judaism</b> views time as both linear and sacred. 
+            </li>
+            <li>
+                Many <b>indigenous religions</b> perceive time as cyclical, connected to natural rhythms like seasons, 
+                lunar cycles, and agricultural cycles.
+            </li>
+        </ul>
+        In summary, the concept of time is universal across religions but its interpretation and significance vary widely. <br>
+        According to  <b>Science</b>, time is considered a fundamental dimension that measures the progression of events from the past, 
+        through the present, and into the future. It is often described in terms of space-time in physics, 
+        where time is interwoven with the three spatial dimensions, and is affected by speed and 
+        gravity as described by Einstein's theory of relativity.
+    </p>
 </body>
 </html>
