add more content to time file

--- a/my_take_on/time.html
+++ b/my_take_on/time.html
@@ -35,6 +35,15 @@
         through the present, and into the future. It is often described in terms of space-time in physics, 
         where time is interwoven with the three spatial dimensions, and is affected by speed and 
         gravity as described by Einstein's theory of relativity.
+
+        One can define time as they like but it is absolutely clear that time plays a part in our life. 
+        That said, the only practical truth we know for a fact is death happens to every living being. 
+        What matters is the time from where we are now to the death is limited. 
+        <br>
+        As terrifying it may sound, it is a beautiful reminder that the actions done in every moment will lay down 
+        the entire discourse of your life and lives affected with you. This brings a sense of responsibility in one's life. 
+        <br>
+        
     </p>
 </body>
 </html>
