add more content to time file

--- a/my_take_on/time.html
+++ b/my_take_on/time.html
@@ -43,6 +43,8 @@
         As terrifying it may sound, it is a beautiful reminder that the actions done in every moment will lay down 
         the entire discourse of your life and lives affected with you. This brings a sense of responsibility in one's life. 
         <br>
+
+        Bottomline, nobody can neglect the importancec of time. Time is everthing we have in this life. Make use of it.
         
     </p>
 </body>
