minor correction in time file

--- a/my_take_on/time.html
+++ b/my_take_on/time.html
@@ -45,7 +45,7 @@
         <br>
 
         Bottomline, nobody can neglect the importancec of time. Time is everthing we have in this life. Make use of it.
-        TIme is the real GOD.
+        Time is the real GOD.
         
     </p>
 </body>
