--- a/my_take_on/friendship.html
+++ b/my_take_on/friendship.html
@@ -8,7 +8,7 @@
 <body>
     <h1>My take on: <span style="color: blueviolet;">Friendship</span></h1>
     <p>
-        Friends make a lot of sense and importance. 
+        Friends make a lot of sense and importance.  <br>
         I wish every human gets at the least one true friend.
     </p>
     <p>
