--- a/my_take_on/spirituality.html
+++ b/my_take_on/spirituality.html
@@ -19,7 +19,7 @@
         and connection in life or to something more, a relation with the higher power. <br>
         Therefore, it is closely knitted with religion and can involve with practices, beliefs associated 
         with religion. <br>
-        for many others, it transcend beyond religion and is related to personal growth, inner peace, 
+        For many others, it transcend beyond religion and is related to personal growth, inner peace, 
         figuring out their or place in the world.  
     </p>
     <p>
