--- a/bookglean/gita.html
+++ b/bookglean/gita.html
@@ -6,7 +6,7 @@
     <title>The Bhagvat Gita</title>
 </head>
 <body>
-    <h1>The Gita</h1>
+    <h1>Takeaways from The Gita</h1>
     <p>
         The thing to do, knowing that the universe will reward single-minded devotion
         to a cause, is to choose your cause wisely.
