add content to about_life file

--- a/thoughts/about_life.html
+++ b/thoughts/about_life.html
@@ -11,5 +11,8 @@
         The only way to win is to be <b>Honest</b> and <b>Consistent.</b><br> 
         There is no alternative to this. Luck will follow its own path.
      </p>
+     <p>
+        Keep fighting and the war is against yourself.
+     </p>
 </body>
 </html>
