put more takeaways from The Gita

--- a/bookglean/gita.html
+++ b/bookglean/gita.html
@@ -17,6 +17,17 @@
         or because you want to show up to someone else,
         <b>but simply because it is right</b>, because it needs to be done.
     </p>
+    <p>
+        Krishna: <br>
+        If you perform your action simply because it needs to be done, 
+        without desire for reward, without fear of consequence, 
+        if you offer your action to me as a sacrifice, 
+        if you are free of jealousy when you act, 
+        if you remain the same whether your action brings you success or failure, <br>
+        that is right action, whatever that action may be.
+        <br>
+        Faith + Self-discipline (Sacrifice + Hard Work) = Wisdom (leading to) -> Happiness (NO doubts + No fear). 
+    </p>
     
 </body>
 </html>
