add lesson to learn about responsibility from The Gita

--- a/bookglean/gita.html
+++ b/bookglean/gita.html
@@ -28,6 +28,38 @@
         <br>
         Faith + Self-discipline (Sacrifice + Hard Work) = Wisdom (leading to) -> Happiness (NO doubts + No fear). 
     </p>
+    <p>
+        He who does his work without loving it or hating it, 
+        he who neither desires something from his work nor rejects anything about it, 
+        is a man who has sacrificed everything, renounced everything.
+        <br>
+        The wise see clearly that the ways of renunciation and action are actually the same.
+    </p>
+    <p>
+        Renunciation does not mean walking away from action. That would count as "inaction", 
+        which is rejection of action. And rejection is an action too, and a selfish one at that, 
+        so you are achieving neither renunciation nor right action when you walk away.
+    </p>
+    <p>
+        The kind of inaction is not noble - it is lazy, cowardly, irresponsible. 
+        The challenge, you see, is to strive for inaction while being fully involved in action. 
+        In other words, the challenge is to strive not only for right acction but tight inaction. 
+        <br>
+        Blessed is the man who is able to be completely involved in action with his body and his senses, 
+        while being completely steeped in inaction at his core.
+        <br>
+        This man's Atman is always <b>still</b>, undisturbed, unattached to the actions of his body 
+        and his senses. It neither expects rewards from his action, not fears the results of his action. 
+        It is neither attached to action norfoes it reject action. That is right inaction.
+    </p>
+    <p>
+        Responsibility is a big word. And it is not quite the same thing as duty. 
+        Duty is an obligation, something that you have to do, which you could be punished for not doing. 
+        But Responsibility is an option - there is no rule that says you have to take it, and no one 
+        can punish you for not taking it. But, according to the Gita, and according to any good 
+        person's code of living, your responsibility, however unplesant it may be, is just as 
+        sacred as your duty.
+    </p>
     
 </body>
 </html>
