add Inner Criticism part to IFS file

--- a/psychology/internal_family_system.html
+++ b/psychology/internal_family_system.html
@@ -63,5 +63,13 @@
         The difference here is that the Self says no to impulsive parts firmly but <b>from a place of love and patience</b>, 
         in just the same way an ideal parent would.
     </p>
+    <h3>Inner Criticism</h3>
+    <p>
+        Be mindful of inner critic who, when one makes a mistake, attacks mercilessly. That attack would trigger a part 
+        that makes one feel totally bereft, lonely, empty and worthless. Experiencing that worthless part can be distressing. 
+
+        Criticism is judgmental and focuses on placing blame, while critique is descriptive and focused on finding solutions. 
+
+    </p>
 </body>
 </html>
