add how IFS deals what modo-mind paradigm fails in IFS file

--- a/psychology/internal_family_system.html
+++ b/psychology/internal_family_system.html
@@ -69,7 +69,23 @@
         that makes one feel totally bereft, lonely, empty and worthless. Experiencing that worthless part can be distressing. 
 
         Criticism is judgmental and focuses on placing blame, while critique is descriptive and focused on finding solutions. 
-
+    </p>
+    <h2>How IFS deals what mono-mind paradigm fails to do</h2>
+    <p>
+        IFS deals with the idea that every human has different parts instead of a mono-mind paradigm with different thoughts 
+        and emotions and impulses. There can be extreme parts in a person, so according to IFS, even those parts when 
+        approached from a mindful place - this respectful, open, curious place - will reveal the secret history of how 
+        they were forced into the role they're in and how they're stuck in that role, terrified that if they don't do it 
+        something dreadful will happen. And, that they're frozen in the past, during the traumatic times when they had to 
+        take on the role. <br>
+        Basically that love is the answer in the inner world, just as it is in the outer world. 
+        Listening to, embracing, and loving parts allows them to heal and transform as much as it does for people. 
+    </p>
+    <p>
+        Another theme this book explores is how it's all parallel — how we relate in the inner world will be 
+        how we relate in the outer. If we can appreciate and have compassion for our parts, 
+        even for the ones we've considered to be enemies, we can do the same for people who resemble them. 
+        On the other hand, if we hate or disdain our parts, we'll do the same with anyone who reminds us of them.
     </p>
 </body>
 </html>
